--- a/view/css/style.css
+++ b/view/css/style.css
@@ -169,6 +169,7 @@
     border-radius: 5px;
 }
 
+
 .formtaikhoan input[type="password"]{
     width: 100%;
     border-radius: 5px;
@@ -366,4 +367,40 @@
     padding: 20px;
 }
 
+  /* === end sản phẩm chi tiết ===  */
 
+
+/* === form đăng ký ===  */
+
+.formdangky input[type="email"],
+.formdangky input[type="text"],
+.formdangky input[type="password"]{
+    width: 100%;
+    border: 1px #CCC solid;
+    padding: 5px;
+    padding-left: 35px;
+    border-radius: 5px; 
+}
+
+.formdangky input[type="submit"] {
+    width: 100%;
+    border-radius: 5px;
+    background-color: #e31837;
+    border: 1px #CCC solid;
+    padding: 5px 10px;
+    cursor: pointer;
+    color: #fff;
+}
+
+.formdangky input[type="submit"]:hover {
+    background-color: #8e081c;
+}
+
+
+
+  /* === thông báo ===  */
+.thongbao {
+    color: green; /* Màu chữ trắng */
+    font-size: 16px; /* Cỡ chữ */
+    font-weight: bold; /* In đậm chữ */
+}
