--- a/view/css/style.css
+++ b/view/css/style.css
@@ -413,3 +413,20 @@
     font-weight: bold;
     margin-top: 10px;
 }
+
+
+/* === Bình luận ===  */
+.binhluan table{
+    margin: 0;
+    width: 100%;
+    margin-left: 5%;
+}
+.binhluan table td:nth-child(1) {
+    width: 50%;
+}
+.binhluan table td:nth-child(2) {
+    width: 20%;
+}
+.binhluan table td:nth-child(1) {
+    width: 30%;
+}
