--- a/view/css/style.css
+++ b/view/css/style.css
@@ -11,18 +11,7 @@
     width: 70%;
     margin: 0 auto;
 }
-button[type="button"] {
-    background-color: #444444;
-    color: #FFFFFF;
-    border-radius: 5px;
-    border: 1px #252836 solid;
-    padding: 5px 10px;
-    transition: background-color 0.3s ease-in-out;
-}
-button[type="button"]:hover {
-    background-color: #666666;
-    cursor: pointer;
-}
+
 .row {
     float: left;
     width: 100%;
@@ -544,7 +533,7 @@ button[type="button"]:hover {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-.bill input[type="button"] {
+.bill input[type="button"],input[type="submit"] {
     background-color: #444444;
     color: #FFFFFF;
     border-radius: 5px;
@@ -552,7 +541,36 @@ button[type="button"]:hover {
     padding: 5px 10px;
     transition: background-color 0.3s ease-in-out;
 }
-.bill input[type="button"]:hover {
+.bill input[type="button"],input[type="submit"]:hover {
     background-color: #666666;
     cursor: pointer;
+}
+
+/* === CẢM ƠN ==== */
+.camondathang h2{
+    color: 	#32CD32;
+}
+
+
+/* ==== Thông tin đơn hàng ====  */
+.thongtin_dh ul{
+    list-style: none; padding: 0; margin: 0; display: flex; gap: 15px;
+}
+.thongtin_dh ul li span{
+    font-weight: bold;
+}
+.table-bill {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 10px; /* khoảng cách giữa các hàng */
+}
+.boxnoidung-ttdh {
+    background-color: #CCC;
+    border-left: 1px #CCC solid #EEE;
+    border-right: 1px #CCC solid #EEE;
+    border-bottom: 1px #CCC solid #EEE;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    min-height: 100px;
+    padding: 20px;
 }
