add file listbill.php and display all orders

--- a/view/css/admin.css
+++ b/view/css/admin.css
@@ -6,6 +6,9 @@
       font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
       line-height: 1.42857143;
   }
+  .mt {
+    margin-top: 10px;
+  }
   .boxcenter {
       width: 70%;
       margin: 0 auto;
