--- a/view/css/style.css
+++ b/view/css/style.css
@@ -16,7 +16,9 @@
     float: left;
     width: 100%;
 }
-
+.mt {
+    margin-top: 10px;
+}
 .mb {
     margin-bottom: 20px;
 }
@@ -596,3 +598,6 @@
     min-height: 100px;
     padding: 20px;
 }
+
+
+/* Danh sách đơn hàng */
